# OtoReport

./: .gitignore  .zenodo.json  INFORME_TECNICO_v2.md  OtoReport.sh  README.md  otoreport.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml
docs/: index.html  plan-material-educativo.md
public/edu/animations/: index.json  otitis-media-demo.json
scripts/: otoreport.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
src-tauri/src/commands/: audiometry.rs  audit.rs  auth.rs  contribute.rs  edu_anim.rs  edu_cache.rs  export.rs  images.rs  migrate.rs  mod.rs  patients.rs  reports.rs  workspace.rs
src-tauri/src/storage/: mod.rs  vault.rs
src/components/annotation/: AnnotationToolbar.tsx  (+2 more)
src/hooks/: useAnimationEditor.ts  useAnimationPlayer.ts  useAnnotation.ts  useAudiometry.ts  useAuth.tsx  useBetaFeatures.ts  useEarImages.ts  useReports.ts  useUpdateChecker.ts  useWorkspace.ts
src/lib/: annotation-renderer.ts  auth.ts  diagram-renderer.ts  edu-image-cache.ts  filesystem.ts  image-filters.ts  image-utils.ts  user-animations.ts  utils.ts
src/pages/: AnimationEditorPage.tsx  ContributeFinding.tsx  Education.tsx  FindingsLibrary.tsx  NewAudiometry.tsx  NewReport.tsx  PatientDetail.tsx  ReportHistory.tsx  Settings.tsx
src/types/: anamnesis.ts  animation.ts  annotation.ts  audiometry.ts  findings.ts  image.ts  index.ts  report.ts
(+57 files in other folders)
